--- a/src/component/FreelancerRegistration/FreelancerRegistration.css
+++ b/src/component/FreelancerRegistration/FreelancerRegistration.css
@@ -3,13 +3,19 @@
     display: flex;
      align-items: center;
      justify-content: center;
-     padding: 20px;
+   
      background: rgb(130, 106, 251);  
      width: 100%;
      min-height: 100vh; 
    }
-
-   
+   .client{
+    width: 100%;
+    min-height: 100vh;
+    background: rgb(130, 106, 251);  
+  }
+   .back-btn{
+    margin: 0.5rem 1rem 0 1rem;
+   }
 .container {
   position: relative;
   max-width: 700px;
