--- a/src/component/ClientRegistration/ClientRegistration.css
+++ b/src/component/ClientRegistration/ClientRegistration.css
@@ -1,5 +1,5 @@
 
-.clientpage{
+.clientpages{
   display: flex;
   align-items: center;
   justify-content: center;
@@ -10,7 +10,7 @@
 
 }
 
-.client{
+.clients{
   width: 100%;
   min-height: 100vh;
   background: rgb(130, 106, 251);  
@@ -18,7 +18,7 @@
 .back-btn{
  margin: 0.5rem 1rem 0 1rem;
 }
-.container {
+.containers {
 
   max-width: 700px;
   width: 100%;
