--- a/src/component/Header/Header.css
+++ b/src/component/Header/Header.css
@@ -8,6 +8,10 @@ nav{
   justify-content: space-between;
   padding: 0 50px 0 100px;
   flex-wrap: wrap;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 5;
 }
 nav .logo{
   color: #fff;
@@ -66,7 +70,7 @@ input[type="checkbox"]{
   }
   nav ul{
     position: fixed;
-    top: 80px;
+    top: 60px;
     left: -100%;
     background: #111;
     height: 100vh;
@@ -74,6 +78,7 @@ input[type="checkbox"]{
     text-align: center;
     display: block;
     transition: all 0.3s ease;
+    z-index: 5;
   }
   #click:checked ~ ul{
     left: 0;
