--- a/src/component/JobPosts/JobPost.css
+++ b/src/component/JobPosts/JobPost.css
@@ -1,102 +1,160 @@
-.jobs-list-container {
-    max-width: 95%;
-    margin: 20px auto;
-    font-family: "Rubik", sans-serif;
-  }
-  
-  .jobs-list-container h2 {
-    font-size: 30px;
-    border-left: 4px solid #023047;
-    padding-left: 20px;
-  }
-  
-  .jobs-list-container .jobs {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 24px;
-  }
-  
-  .jobs-list-container .jobs img {
-    width: 60px;
-  }
-  
-  .jobs-list-container .job {
-    box-shadow: 0 4px 24px -8px rgba(2, 48, 71, 0.2);
-    padding: 24px;
-    border-radius: 16px;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    transition: all 400ms ease;
-  }
-  
-  .jobs-list-container .job:hover {
-    transform: scale(1.03);
-  }
-  
-  .jobs-list-container .open-positions {
-    
-    color: #e63946;
-  }
-  
-  .job-header{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+.clientpage {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* padding: 10px 2rem; */
+
+  width: 100%;
+  min-height: 100vh;
+
+}
+
+.client {
+  width: 100%;
+  min-height: 100vh;
+
+}
+
+.back-btn {
+  margin: 0.5rem 1rem 0 1rem;
+}
+
+.container {
+  margin-top: 100px;
+  max-width: 700px;
+  width: 100%;
+  background: #fff;
+  padding: 25px;
+  border-radius: 8px;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+
+}
+
+.container .title {
+  font-size: 1.5rem;
+  color: #333;
+  font-weight: 500;
+  text-align: center;
+}
+
+.title {
+  text-align: center;
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+.form {
+  width: 100%;
+}
+
+.ant-form-item-label {
+  font-weight: 600;
+
+}
+
+.ant-form-item {
+  margin-bottom: 16px;
+}
+
+.custom-input {
+
+  height: 3rem;
+}
+
+.custom-dropdown {
+  height: 3rem;
+}
+
+
+.container .form {
+  margin-top: 30px;
+}
+
+
+
+.form .btn {
+  height: 45px;
+  width: 100%;
+  color: #fff;
+  font-size: 1rem;
+  font-weight: 400;
+  margin-top: 10px;
+  border: none;
+  cursor: pointer;
+  transition: all 0.2s ease;
+  background: rgb(130, 106, 251);
+}
+
+.form button:hover {
+  background: rgb(88, 56, 250);
+}
+
+
+.line {
+  position: relative;
+  height: 1px;
+  width: 100%;
+  margin: 36px 0;
+  background-color: #d4d4d4;
+}
+
+.line::before {
+  content: 'Or';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
+  color: #8b8b8b;
+  padding: 0 15px;
+}
+
+.media-options {
+  text-align: center;
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+  justify-content: center;
+}
+
+
+.facebook {
+  background-color: #4267b2;
+}
+
+.google {
+  border: 1px solid #cacaca;
+}
+
+.field {
+  width: 100%;
+  padding: 1.3rem 0;
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* /Responsive/ */
+@media screen and (max-width: 500px) {
+  .form .column {
     flex-wrap: wrap;
   }
-  .jobs-list-container .job-title {
-    font-size: 20px;
-    padding: 10px 0;
-    margin: 0;
-    color: #023047;
+
+  .form :where(.gender-option, .gender) {
+    row-gap: 15px;
   }
-  
-  .jobs-list-container .details {
-    margin-top: 6px;
-    font-size: 14px;
-    color: #333;
-    line-height: 1.8;
-    flex: 1;
+
+  .media-options {
+    flex-direction: column;
   }
-  
-  .jobs-list-container .details-btn {
-    text-decoration: none;
-    border: 1px solid #023047;
-    color: #000;
-    padding: 8px 16px;
-    border-radius: 8px;
-    text-align: center;
-    margin-top: 20px;
-    transition: all 400ms ease;
-  }
-  
-  .jobs-list-container .details-btn:hover {
-    background: #023047;
-    color: #fff;
-  }
-  
-  .jobs-list-container .job-search {
-    width: 100%;
-    padding: 12px 24px;
-    font-size: 18px;
-    font-family: "Rubik", sans-serif;
-    box-sizing: border-box;
-    border: 1px solid #333;
-    border-radius: 8px;
-    margin-bottom: 20px;
-  }
-  
-  @media (max-width: 940px) {
-    .jobs-list-container .jobs {
-      grid-template-columns: 1fr 1fr;
-    }
-  }
-  
-  @media (max-width: 640px) {
-    .jobs-list-container .jobs {
-      grid-template-columns: 1fr;
-      max-width: 400px;
-      margin: 0 auto;
-    }
-  }
+}
